--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production"
   },
   "dependencies": {
-    "angular": "1.5.11"
+    "angular": "1.5.11",
+    "angular-ui-bootstrap": "^2.5.6",
+    "bootstrap": "^3.4.1"
   },
   "devDependencies": {
     "css-loader": "^6.7.1",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
+    "less": "^4.5.1",
+    "less-loader": "^12.3.1",
     "style-loader": "^3.3.1",
     "webpack": "5.21.2",
     "webpack-cli": "^4.10.0",
