--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "set NODE_OPTIONS=--openssl-legacy-provider && webpack serve --open --mode development",
-    "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production"
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && webpack --mode production",
+    "build:ts": "tsc --noEmit",
+    "type-check": "tsc --noEmit --watch"
   },
   "dependencies": {
     "angular": "1.5.11",
@@ -13,12 +15,16 @@
     "bootstrap": "^3.4.1"
   },
   "devDependencies": {
+    "@types/angular": "^1.8.6",
+    "@types/node": "^18.19.0",
     "css-loader": "^6.7.1",
     "html-loader": "^5.1.0",
     "html-webpack-plugin": "^5.5.0",
     "less": "^4.5.1",
     "less-loader": "^12.3.1",
     "style-loader": "^3.3.1",
+    "ts-loader": "^9.5.1",
+    "typescript": "^5.3.3",
     "webpack": "5.21.2",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.4"
